# wxstream-rs

./: .gitignore  Cargo.toml  config.toml
src/: config.rs  db.rs  main.rs  models.rs  s3.rs  stations.rs
src/jobs/: mod.rs  parse_job.rs  quality_job.rs  scanner_job.rs  transcribe_job.rs  trim_job.rs
src/parse/: mod.rs  normalize.rs  sky.rs  visibility.rs
src/quality/: agent.rs
src/transcribe/: mod.rs  prompt.rs  whisper.rs
src/trim/: mod.rs
systemd/: install-services.sh  wxstream-parse.service  wxstream-parse@.service  wxstream-quality.service  wxstream-scanner.service  wxstream-trim.service  wxstream-trim@.service
wxstream-rs/src/: db.rs  models.rs
wxstream-rs/src/jobs/: mod.rs  trim_job.rs
wxstream-rs/src/parse/: altimeter.rs  mod.rs  normalize.rs  sky.rs  temperature.rs  visibility.rs  wind.rs
wxstream-rs/src/quality/: mod.rs
wxstream-rs/src/transcribe/: mod.rs  whisper.rs
wxstream-rs/src/trim/: timestamp.rs
wxstream-rs/systemd/: wxstream-transcribe.service  wxstream-transcribe@.service
