[package]
name        = "wxstream"
version     = "0.1.0"
edition     = "2021"
description = "WxStream AWOS/ASOS audio processing pipeline"

[[bin]]
name = "wxstream"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio          = { version = "1",  features = ["full"] }
tokio-stream   = "0.1"
futures        = "0.3"

# MongoDB
mongodb        = { version = "2",  features = ["tokio-runtime"] }
bson           = { version = "2",  features = ["chrono-0_4"] }

# AWS S3
aws-config     = "1"
aws-sdk-s3     = "1"

# HTTP client (Whisper + Claude APIs)
reqwest        = { version = "0.11", features = ["json", "multipart", "stream"] }

# Serialization
serde          = { version = "1",  features = ["derive"] }
serde_json     = "1"

# Config
config         = "0.14"
dotenvy        = "0.15"

# Error handling
anyhow         = "1"
thiserror      = "1"

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono         = { version = "0.4", features = ["serde"] }

# Regex (parser)
regex          = "1"
once_cell      = "1"

# Audio processing via ffmpeg subprocess
tempfile       = "3"

# Retry logic
tokio-retry    = "0.3"

# UUID
uuid           = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
